# checkout-pr

./: CLAUDE.md  Cargo.toml  README.md  install.sh  preview-colors.sh
iterm/: checkout_iterm_daemon.py  install.sh  test_checkout_iterm_daemon.py
skills/: checkout-and-review-pr-annotate.md  checkout-and-review-pr.md  checkout-pr.md  review.md
skills/checkout-and-review-pr/: SKILL.md
skills/checkout-and-review-pr-annotate/: SKILL.md
skills/checkout-and-review-pr-annotate/agents/: openai.yaml
skills/checkout-and-review-pr/agents/: openai.yaml
skills/checkout-pr/: SKILL.md
skills/checkout-pr/agents/: openai.yaml
skills/checkout-review/: SKILL.md
skills/checkout-review/agents/: openai.yaml
src/: main.rs
src/prompts/: statsig-rollout.md
