[package]
name = "checkout"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "checkout"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
strip = true
